--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#FF00C000</color>
+    <color name="dark_green">#FF007000</color>
+    <color name="orange">#FFF0A000</color>
+    <color name="red_orange">#FFFF6000</color>
 </resources>
